--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@ header {
 }
 
 .clearfix::after{
-    content "";
+    content: "";
     display: table;
-    clear: both
+    clear: both;
 }
 
 aside {
@@ -48,5 +48,4 @@ main .contenitore{
 footer {
     height: 100px;
     background-color: lightblue;
-
 }
